Description
ReactOS version: 0.4.15-dev-3507-g00ffe2d
Bug: Cursor/Caret blinking rate "Never" get the caret static (always shown). None position is not doing its job, as Windows ("None") does.
Videos attached:
ReactOS Blinking caret - Never not working.webm
XP XP - Blinking caret Never OK.webm
Also, it's spamming this in the log:
| (/win32ss/gdi/gdi32/objects/gdiobj.c:326) Trying to delete system object 0x00900030 | 
Attachments
Issue Links
- relates to
- 
                    CORE-11950 The position of the caret is shifted by 2 pixels to the left -         
- Open
 
-         
- 
                    CORE-9141 Abiword 2.6.8 Can't type or edit text properly, because the cursor is not visible initially -         
- Resolved
 
-         
- 
                    CORE-13984 LibreOffice Writer shows no blinking caret -         
- Resolved
 
-         
- 
                    CORE-14359 [WIN32SS] Apache Open Office 4.1.2 SWriter - no blinking Caret -         
- Resolved
 
-