[ACCESS][MAIN] Fix setting cursor/caret blinking rate

- Save uCaretBlinkTime to CursorBlinkRate registry key
- Also fix blinking rate never reaching None

CORE-17929